2004-04-06  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/cmdAH.test (cmdAH-18.2): Added constraint because
	access(...,X_OK) is defined to be permitted to be meaningless when
	running as root, and OSX exhibits this.  [Bug 929892]

2004-04-02  Don Porter  <dgp@users.sourceforge.net>

        * tests/tcltest.test: Corrected constraint typos: "nonRoot" ->
        "notRoot".  Thanks to Steven Abner (tauvan). [Bug 928353]

2004-03-31  Don Porter	<dgp@users.sourceforge.net>

	* doc/msgcat.n: Clarified message catalog file encodings. [Bug 811457]
	* library/msgcat/msgcat.tcl ([mcset], [ConvertLocale], [Init]):
	Corrected [mcset] to be able to successfully set a translation to
	the empty string.  [mcset $loc $src {}] was incorrectly set the
	$loc translation of $src back to $src.  Also changed [ConvertLocale]
	to minimally require a non-empty "language" part in the locale value.
	If not, an error raised prompts [Init] to keep looking for a valid
	locale value, or ultimately fall back on the "C" locale. [Bug 811461].
	* library/msgcat/pkgIndex.tcl:	Bump to msgcat 1.3.2.

2004-03-31  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclObj.c (HashObjKey): Make sure this hashes the whole
	string rep of the object, instead of missing the last character.

2004-03-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclInt.h:
	* generic/tclEncoding.c (TclFindEncodings, Tcl_FindExecutable): 
	* mac/tclMacInit.c (TclpInitLibraryPath):   Correct handling of UTF
	* unix/tclUnixInit.c (TclpInitLibraryPath): data that is actually
	* win/tclWinFile.c (TclpFindExecutable):    "clean", allowing the
	* win/tclWinInit.c (TclpInitLibraryPath):   loading of Tcl from
	paths that contain multi-byte chars on Windows [Bug 920667]

2004-03-28  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c (TclCompileScript): corrected possible
	segfault when a compilation returns TCL_OUTLINE_COMPILE after
	having grown the compile environment [Bug 925121].
